--- a/cssonly/styles/styles.css
+++ b/cssonly/styles/styles.css
@@ -3,33 +3,49 @@ html, body {
   padding: 0px;
 }
 
+html.no-touch .my-carousel-control {
+  /*opacity: 0;*/
+}
+
+html.no-touch .my-carousel-control:hover {
+  opacity: 0.9;
+}
+
+html.no-touch .my-carousel-indicators {
+  opacity: 0;
+}
+
+html.no-touch .my-carousel-indicators:hover {
+  opacity: 0.9;
+}
+
 .search {
   position: absolute;
   top: 20%;
-  left: 10%;
+  left: 80px;
   width: 35%;
   height: 50%;
   background-color: white;
   z-index: 1000;
 }
 
-.carousel {
+.my-carousel {
   position: relative;
   box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
 }
 
-.carousel-inner {
+.my-carousel-inner {
   position: relative;
   overflow: hidden;
   width: 100%;
 }
 
-.carousel-open:checked + .carousel-item {
+.my-carousel-open:checked + .my-carousel-item {
   position: static;
   opacity: 100;
 }
 
-.carousel-item {
+.my-carousel-item {
   position: absolute;
   opacity: 0;
   -webkit-transition: opacity 0.6s ease-out;
@@ -37,7 +53,7 @@ html, body {
   overflow: hidden;
 }
 
-.carousel-item .description {
+.my-carousel-item .description {
   /*float:right;*/
   position: absolute;
   top: 0%;
@@ -49,16 +65,16 @@ html, body {
   border: 1px solid black;
 }
 
-.carousel-item img {
+.my-carousel-item img {
   display: block;
   height: 100%;
 }
 
 
 
-.carousel-control {
-  background: rgba(0, 0, 0, 0.28);
-  border-radius: 50%;
+.my-carousel-control {
+  background: transparent;
+  /*border-radius: 50%;*/
   color: #fff;
   cursor: pointer;
   display: none;
@@ -76,24 +92,24 @@ html, body {
   z-index: 10;
 }
 
-.carousel-control.prev {
+.my-carousel-control.prev {
   left: 2%;
 }
 
-.carousel-control.next {
+.my-carousel-control.next {
   right: 2%;
 }
 
-.carousel-control:hover {
-  background: rgba(0, 0, 0, 0.8);
-  color: #aaaaaa;
+.my-carousel-control:hover {
+  /*background: rgba(0, 0, 0, 0.8);*/
+  color: white;
 }
 
-#carousel-1:checked ~ .control-1, #carousel-2:checked ~ .control-2, #carousel-3:checked ~ .control-3, #carousel-4:checked ~ .control-4 {
+#my-carousel-1:checked ~ .control-1, #my-carousel-2:checked ~ .control-2, #my-carousel-3:checked ~ .control-3, #my-carousel-4:checked ~ .control-4 {
   display: block;
 }
 
-.carousel-indicators {
+.my-carousel-indicators {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -105,27 +121,27 @@ html, body {
   z-index: 10;
 }
 
-.carousel-indicators li {
+.my-carousel-indicators li {
   display: inline-block;
   margin: 0 5px;
 }
 
-.carousel-indicators li div {
+.my-carousel-indicators li div {
   display: none;
 }
 
-.carousel-bullet {
+.my-carousel-bullet {
   color: #fff;
   cursor: pointer;
   display: block;
   font-size: 35px;
 }
 
-.carousel-bullet:hover {
+.my-carousel-bullet:hover {
   color: #aaaaaa;
 }
 
-#carousel-1:checked ~ .control-1 ~ .carousel-indicators li:nth-child(1) .carousel-bullet, #carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet, #carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet, #carousel-4:checked ~ .control-4 ~ .carousel-indicators li:nth-child(4) .carousel-bullet {
+#my-carousel-1:checked ~ .control-1 ~ .my-carousel-indicators li:nth-child(1) .my-carousel-bullet, #my-carousel-2:checked ~ .control-2 ~ .my-carousel-indicators li:nth-child(2) .my-carousel-bullet, #my-carousel-3:checked ~ .control-3 ~ .my-carousel-indicators li:nth-child(3) .my-carousel-bullet, #my-carousel-4:checked ~ .control-4 ~ .my-carousel-indicators li:nth-child(4) .my-carousel-bullet {
   color: #428bca;
 }
 
@@ -146,17 +162,17 @@ html, body {
   .search {
     display: none;
   }
-  .carousel-item .description {
+  .my-carousel-item .description {
     display: none;
   }
-  .carousel-item img {
+  .my-carousel-item img {
     -webkit-transform: translateY(0%) translateX(-50%);
     transform: translateY(0%) translateX(-50%);
   }
-  .carousel-indicators li label {
+  .my-carousel-indicators li label {
    display: none;
   }
-  .carousel-indicators li div {
+  .my-carousel-indicators li div {
    display: block ;
   }
 }
